@startuml user_resource
title User and Resource Management

left to right direction

skinparam shadowing false
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classHeaderBackgroundColor #D6E4F0
skinparam packageBackgroundColor #EAF2FF
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam ArrowColor #444444
skinparam ArrowThickness 1.5
skinparam noteBorderColor #999999
skinparam noteBackgroundColor #FFFDE7
hide circle

class User {
  - email : String
  - firstName : String
  - lastName : String
  - active : boolean
}

class Resource {
  - dailyRate : BigDecimal
  - tccRate : BigDecimal
  - staffingStart : LocalDate
  - staffingEnd : LocalDate
}

class TccAnnuel {
  - annee : int
  - dailyRate : BigDecimal
  - tccRate : BigDecimal
}

class Parameter {
  - key : String
  - value : String
  --
  + getValue() : String
}

Resource "0..1" --> "1"    User    : may be >
Resource "1"    *--  "1..*" TccAnnuel : cost history >

note right of Resource
  An external consultant is a Resource with no linked User account.
end note

note right of TccAnnuel
  TCC (Taux de Charge Chargé) — fully loaded annual cost including salary, employer charges and PPR (~×1.7).
end note

note bottom of Parameter
  Configurable business constants: working days/year, PPR rate, default exchange rate.
end note

@enduml
